[gd_scene load_steps=5 format=3 uid="uid://cw4cxxrrx0xbv"]

[ext_resource type="Script" path="res://gameObjects/player/playerWeapons/shotgun/shotgun.gd" id="1_1tamv"]
[ext_resource type="Texture2D" uid="uid://dnh7tu5mcjc1w" path="res://art/Custom/shotgun.png" id="1_2l7po"]
[ext_resource type="AudioStream" uid="uid://c36bu85ls085e" path="res://sfx/Space_Ambience_and_Sound_Pack/Laser_And_Laser_Gun/Laser_Gun_Load.wav" id="3_w5tms"]
[ext_resource type="AudioStream" uid="uid://dudvjb57vbjfq" path="res://sfx/Space_Ambience_and_Sound_Pack/Laser_And_Laser_Gun/Laser_Impact.wav" id="4_gqwsw"]

[node name="shotgun" type="Node2D"]
script = ExtResource("1_1tamv")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_2l7po")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="timeoutTimer" type="Timer" parent="."]
wait_time = 12.0
autostart = true

[node name="SFX" type="Node" parent="."]

[node name="readySound" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("3_w5tms")

[node name="shootSound" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("4_gqwsw")
volume_db = -10.0
bus = &"SFX"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="timeoutTimer" to="." method="_on_timeout_timer_timeout"]
